# Ramym-Brain-

./: .env.example  .gitignore  .instructions.md  pyproject.toml
hooks/: install.py  post_commit.py
memories/: .gitkeep
src/: __init__.py  config.py  db.py  ingest.py  prompts.py  resolver.py  server.py
src/integrations/: __init__.py  jira_client.py  outlook.py  teams.py
src/memory/: embeddings.py  search.py  store.py
src/tools/: developer_tools.py  leader_tools.py  memory_tools.py
supabase/: 001_initial_schema.sql
